# kurly_contest

./: README.md  app.py  crawling.py  make_network.py  preprocess.py  pyproject.toml  utils.py
example/: Beauty_6.csv  Market_7.csv
preprocessing/: 0.1.[홈페이지 리뷰 ] 크롤링 코드.ipynb  0.2.[공통] 시간 순 자르기.ipynb  0.3.[공통] 지식그래프 생성 코드.ipynb  1.1.[블로그 포스팅 - 마켓컬리] 전처리 과정.ipynb  1.2.[블로그 포스팅 - 마켓컬리] 키워드 추출.ipynb  2.1.[블로그 포스팅 - 뷰티컬리] 전처리 과정.ipynb  2.2.[블로그 포스팅 - 뷰티컬리] 키워드 추출.ipynb  3.1.[홈페이지 리뷰 - 마켓컬리] 크롤링 데이터 병합.ipynb  3.2.[홈페이지 리뷰 - 마켓컬리] 전처리 과정.ipynb  3.3.[홈페이지 리뷰 - 마켓컬리] 키워드 추출.ipynb  4.1.[홈페이지 리뷰 - 뷰티컬리] 크롤링 데이터 병합.ipynb  4.2.[홈페이지 리뷰 - 뷰티컬리] 전처리 과정.ipynb  4.3.[홈페이지 리뷰 - 뷰티컬리] 키워드 추출.ipynb
