[tool.poetry]
name = "jinaai-project"
version = "0.1.0"
description = ""
authors = ["GeonWooKim","Hyeonikim","SeungYeolRyu"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
langchain = "^0.0.326"
python-dotenv = "^1.0.0"
transformers = "^4.34.1"
pillow = "^10.1.0"
openai = "^0.28.1"
altair = "^5.1.2"
streamlit = "^1.28.0"
konlpy = "^0.6.0"
kiwipiepy = "^0.16.1"
keybert = "^0.8.3"
sentence-transformers = "^2.2.2"
streamlit-agraph = "^0.0.45"
sparqlwrapper = "^2.0.0"
networkx = "^3.2.1"
langchain-experimental = "^0.0.40"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
